jenkins-service1.yaml
---
  kind: Service
  apiVersion: v1
  metadata:
    name: jenkins-ui
    namespace: default
  spec:
    type: NodePort
    selector:
      app: jenkins
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
        name: ui
